fixed extra space on right side of menu pages

--- a/Menu_Pages/Sides.CSS
+++ b/Menu_Pages/Sides.CSS
@@ -2,9 +2,9 @@
   font-family: 'Roboto', sans-serif;
 }
 
-header {
+/* .row {
   width: 100%;
-}
+} */
 
 #container img {
   width: 350px;
