--- a/Menu_Pages/TOS.CSS
+++ b/Menu_Pages/TOS.CSS
@@ -2,7 +2,27 @@
     font-family: 'Roboto', sans-serif;
   }
   
-  .text-centered {
+  .textoverimg {
+    position: relative;
+    
+  }
+
+  .textoverimg img {
+    width: 100%;
+    height: auto;
+  }
+
+  .textoverimg h1 {
+    position: absolute;
+    top: 50%; left: 50%;
+    color: white;
+  }
+
+  /* .image {
+    position: relative;
+  } */
+
+  /* .text-centered {
     white-space: nowrap;
     position: absolute;
     top: 60%;
@@ -21,7 +41,7 @@
     color: #FFFFFF;
     font-size: 50px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.78);
-  }
+  } */
   
   .containe-fluid {
     /* position: absolute;
